# lingmo-screenlocker

./: CMakeLists.txt
.github/workflows/: build.yml  package.yml
debian/: changelog  control  copyright
rpm/: lingmo-screenlocker.spec
screenlocker/: CMakeLists.txt  main.cpp
